--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.5",
     "antd": "^5.24.1",
+    "axios": "^1.7.9",
     "next": "13.5.8",
     "react": "^18",
     "react-dom": "^18"
